force-app/main/default/objects/BMCServiceDesk__SYSQVQuery__c/BMCServiceDesk__SYSQVQuery__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the QuickView details.</description>
    <label>Quickviews</label>
    <nameField>
        <displayFormat>QVQuery-{0000}</displayFormat>
        <label>SYSQVQuery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVQueries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>