force-app/main/default/objects/BMCServiceDesk__SYSQVQuery__c/fields/BMCServiceDesk__accessType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__accessType__c</fullName>
    <label>Access Type</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>