force-app/main/default/objects/BMCServiceDesk__SYSQVQuery__c/fields/BMCServiceDesk__Formatting_Data__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Formatting_Data__c</fullName>
    <description>Stores the formatting rules, conditions, and actions that are used to optimize a QuickView.</description>
    <label>Formatting Data</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>