force-app/main/default/objects/BMCServiceDesk__SYSQVQuery__c/fields/BMCServiceDesk__isQVOptimized__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__isQVOptimized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a  QuickView is optimized for the Remedyforce Console.</description>
    <label>isQVOptimized</label>
    <type>Checkbox</type>
</CustomField>