force-app/main/default/objects/BMCServiceDesk__SYSQVQuery__c/fields/BMCServiceDesk__name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>