force-app/main/default/objects/BMCServiceDesk__SYSQVQuery__c/fields/BMCServiceDesk__QueryStatementData__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__QueryStatementData__c</fullName>
    <description>Stores QuickView data for optimization.</description>
    <inlineHelpText>Stores QuickView data for optimization.</inlineHelpText>
    <label>QueryStatementData</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>